--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server",
-    "dev": "node --watch --env-file=.env server"
+    "start": "node backend/index.js",
+    "dev": "node --watch --env-file=.env backend/index.js"
   },
   "keywords": [],
   "author": "",
